# animgen

./: .env.example  .gitignore  README.md  clean.py  main.py  pyproject.toml
docs_rag/manim/: common_errors.md  known_good_patterns.md  text_and_shapes.md
frontend/: index.html  vite.config.js
frontend/src/: App.css  App.jsx  index.css  styles.css
manim-frontend/: pyproject.toml
manim-frontend/media/Tex/: a944f203ca25c48a.tex
manim-frontend/media/videos/main/720p30/partial_movie_files/PhotosynthesisDemo/: partial_movie_file_list.txt
pdfToLLM/: pyproject.toml
pdfToLLM/parsed/: class8_math.md  class8_math2.md
scripts/: test_codegen.py  test_docs_search.py  test_pipeline.py  test_render.py  test_router.py  test_validate.py
src/animgen/: api.py  codegen.py  config.py  docs_search.py  groq_clients.py  groq_manim.py  manim_codegen.py  manim_docs_search.py  manim_renderer.py  manim_runner.py  models.py  pdf_to_llm.py  pipeline.py  router.py  runner.py  typst_renderer.py  validator.py
typst-frontend/: main.py  pyproject.toml
typst-frontend/typst-output/: lesson.typ
