[project]
name = "animgen"
version = "0.4.0"
description = "Animgen — AI-powered Manim animation generator"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "manim>=0.20.1",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.18",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
animgen-api = "animgen.api:app"
